--- a/car_sale/car/templates/car/add.html
+++ b/car_sale/car/templates/car/add.html
@@ -13,7 +13,7 @@
             {{ form.price }}<br>
             {{ form.number_owners }}<br>
             {{ form.text }}<br>
-            {{ form.photo }}<br>
+            {% comment %} {{ form.photo }}<br> {% endcomment %}
             <span>{{ error }}</span>
             <button class="btn btn-success" type="submit"> Добавить автомобиль</button>
             </form>
