--- a/car_sale/car/templates/car/base.html
+++ b/car_sale/car/templates/car/base.html
@@ -14,7 +14,7 @@
 <body>
     <aside>
         <img  src="{% static 'car/images/car.png' %}" alt='logo'>
-        <a href="{% url 'home' %}" style="text-decoration: none" class='logo'>CarSale</a>
+        <a href="{% url 'home' %}" class='logo'>CarSale</a>
             <ul>
                 <a href="{% url 'home' %}"><li><i class="fa-solid fa-car"></i> Главная</li></a>
                 <a href="{% url 'about' %}"><li><i class="fa-solid fa-car-side"></i> О сайте</li></a>
