--- a/car_sale/car/templates/car/index.html
+++ b/car_sale/car/templates/car/index.html
@@ -3,14 +3,21 @@
 	{{ title }}
 {% endblock %}
 {% block content %}
+	{% if car %}
+		<div class="features">
+			<h1>{{ title }}</h1>
+			{% for car in cars %}
+				<div class="alert alert-warning">
+					<h3>Автомобиль {{ car.brand }} {{ car.model }}</h3>
+					<p> {{ car.text }} </p>
+					<a href="{% url 'detail_car' car.id %}" class="btn btn-warning">Читать</a>
+				</div>
+			{% endfor %}
+		</div>
+	{% else %}
 	<div class="features">
 		<h1>{{ title }}</h1>
-		{% for car in cars %}
-			<div class="alert alert-warning">
-				<h3>Автомобиль {{ car.brand }} {{ car.model }}</h3>
-				<p> {{ car.text }} </p>
-				<a href="{% url 'detail_car' car.id %}" class="btn btn-warning">Читать</a>
-			</div>
-		{% endfor %}
+		<p>На данный момент нет объявлений</p>
 	</div>
+	{% endif %}
 {% endblock %}
