--- a/car_sale/car/templates/forum/forum.html
+++ b/car_sale/car/templates/forum/forum.html
@@ -4,8 +4,7 @@
 {% endblock %}
 {% block content %}
 	<div class="features">
-		<h3>{{ title }}</h3>
-		<p> Телефон технической поддержки</p>
-		<p> 555-555-555 </p>
+		<h1>{{ title }}</h1>
+		<p> Forum </p>
 	</div>
 {% endblock %}
