--- a/car_sale/car/templates/car/index.html
+++ b/car_sale/car/templates/car/index.html
@@ -11,7 +11,8 @@
 					<div class="alert alert-warning">
 					<h3>Автомобиль {{ car.brand }} {{ car.model }}</h3>
 					<p> {{ car.text|linebreaks|truncatewords:50 }} </p>
-					<a href="{% url 'car:detail_car' car:detail_car.pk %}" class="btn btn-warning">Читать</a>
+					{% comment %} <a href='{% url "car:detail_car" car.id %}' class="btn btn-warning">Читать</a> {% endcomment %}
+					<a href="{{ car.get_absolute_url }}" class="btn btn-warning">Читать</a>
 					</div>
 			{% endfor %}
 		{% else %}
