--- a/car_sale/car/templates/base.html
+++ b/car_sale/car/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load car_tags %}
 <!doctype html>
 <html lang='ru'>
 <head>
@@ -19,24 +20,11 @@
             <li class="logo"><a href="{% url 'car:home' %}"><div class="logo"></div></a></li>
             {% comment %} <a href="{% url 'car:home' %}" class='logo'>CarSale</a> {% endcomment %}
 			{% comment %} <li class="logo"><a href="{% url 'car:home' %}"><div class="logo"></div></a></li> {% endcomment %}
-            {% for m in menu %}
-                {% if not forloop.last %}
-			        <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	            {% else %}
-			        <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-	            {% endif %}
-            {% endfor %}
-                        {% comment %} {% if request.user.is_authenticated %}
-                        <li class="last"> {{user.username}} | <a href="{% url 'logout' %}">Выйти</a></li>
-                        {% else %}
-                        <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
-                        {% endif %} {% endcomment %}
+            {% menu menu=menu %}
                     </ul>
                     <div class="clear"></div>
         </div>
     {% endblock mainmenu %}
-
-
     <aside>
         <a href="{% url 'car:home' %}" class='logocar'>CarSale</a>
             <ul>
@@ -46,13 +34,7 @@
                     {% else %}
                         <a href="{% url 'forum:forum' %}"><li><i class="fa-solid fa-car-side"></i> Все категории </li></a>
                     {% endif %}
-                    {% for cat in cats%}
-                        {% if cat.id == cat_selected %}
-                            <a ><li><span class="selected"> {{ cat.name }} </span></li></a>
-                        {% else %}
-                            <a href="{{ cat.get_absolute_url }}"><li><i class="fa-solid fa-car-side"></i> {{ cat.name }} </li></a>
-                        {% endif %}
-                    {% endfor %}
+                    {% show_categories 'name' cat_selected %}
 
                 {% elif cars %}
                     {% if cat_selected == 0 %}
@@ -60,13 +42,7 @@
                     {% else %}
                         <a href="{% url 'car:home' %}"><li><i class="fa-solid fa-car-side"></i> Все категории </li></a>
                     {% endif %}
-                    {% for cat in cats%}
-                        {% if cat.id == cat_selected %}
-                            <a ><li><span class="selected"></i> {{ cat.name }} </li></a>
-                        {% else %}
-                            <a href="{{ cat.get_absolute_url }}"><li><i class="fa-solid fa-car-side"></i> {{ cat.name }} </li></a>
-                        {% endif %}
-                    {% endfor %}
+                    {% categories_car  'name' cat_selected %}
                 {% endif %}
                 <a href="{% url 'car:add' %}"><li><button class="btn btn-info">Добавить автомобиль</li></a>
             </ul>
