--- a/car_sale/car/templates/base.html
+++ b/car_sale/car/templates/base.html
@@ -28,23 +28,25 @@
     <aside>
         <a href="{% url 'car:home' %}" class='logocar'>CarSale</a>
             <ul>
-                {% if posts %}
+                {% if flag_post %}
                     {% if cat_selected == 0 %}
                         <a><li><span class="selected"> Все категории </span></li></a>
                     {% else %}
                         <a href="{% url 'forum:forum' %}"><li><i class="fa-solid fa-car-side"></i> Все категории </li></a>
                     {% endif %}
                     {% show_categories 'name' cat_selected %}
+                    <a href="{% url 'car:add' %}"><li><button class="btn btn-info">Добавить пост</li></a>
 
-                {% elif cars %}
+                {% elif flag_car %}
                     {% if cat_selected == 0 %}
                         <a><li><span class="selected"> Все категории </span></li></a>
                     {% else %}
                         <a href="{% url 'car:home' %}"><li><i class="fa-solid fa-car-side"></i> Все категории </li></a>
                     {% endif %}
                     {% categories_car  'name' cat_selected %}
+                    <a href="{% url 'car:add' %}"><li><button class="btn btn-info">Добавить обхявление</li></a>
                 {% endif %}
-                <a href="{% url 'car:add' %}"><li><button class="btn btn-info">Добавить автомобиль</li></a>
+                
             </ul>
     </aside>
     <main>
