--- a/car_sale/car/templates/forum/forum.html
+++ b/car_sale/car/templates/forum/forum.html
@@ -13,7 +13,7 @@
 						<p class "last">Дата: {{ post.time_update|date:'d-m-Y' }}</p>
 					<h3>{{ post.title }} </h3>
 					<p> {{ post.text|linebreaks|truncatewords:50 }} </p>
-					<a href="{% url 'forum:post_detail' post.id %}" class="btn btn-warning">Читать</a>
+					<a href="{% url 'forum:post_detail' post.slug %}" class="btn btn-warning">Читать</a>
 					</div>
 			{% endfor %}
 		{% else %}
