--- a/car_sale/car/templates/forum/forum.html
+++ b/car_sale/car/templates/forum/forum.html
@@ -12,6 +12,9 @@
 						<p class "first">Категория: {{ post.cat }}</p>
 						<p class "last">Дата: {{ post.time_update|date:'d-m-Y' }}</p>
 					<h3>{{ post.title }} </h3>
+					{% if post.photo %}
+						<p><img class="picture_img" src="{{post.photo.url}}">
+					{% endif %}
 					<p> {{ post.text|linebreaks|truncatewords:50 }} </p>
 					<a href="{% url 'forum:post_detail' post.slug %}" class="btn btn-warning">Читать</a>
 					</div>
