--- a/car_sale/car/templates/forum/categories_car.html
+++ b/car_sale/car/templates/forum/categories_car.html
@@ -1,5 +1,5 @@
 {% for cat in cats %}
-{% if cat.forum_set.count > 0 %}
+{% if cat.car_set.count > 0 %}
 	{% if cat.slug == cat_selected %}
 		<a ><li><span class="selected"> {{ cat.name }} </span></li></a>
 	{% else %}
