--- a/car_sale/car/templates/base.html
+++ b/car_sale/car/templates/base.html
@@ -13,14 +13,21 @@
     <link rel='stylesheet' href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 <body>
-
     {% block mainmenu %}
 		<div class="header">
 			<ul id="mainmenu" class="mainmenu">
             <li class="logo"><a href="{% url 'car:home' %}"><div class="logo"></div></a></li>
-            {% menu menu=menu %}
-                    </ul>
-                    <div class="clear"></div>
+            {% for m in menu %}
+                    <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+            {% endfor %}
+            {% if request.user.is_authenticated %}
+            <li class="last"> {{ user.username }} | <a href="{% url 'car:logout' %}"> Выйти </a></li>
+            {% else %}
+            <li class="last"><a href="{% url "car:login" %}"> Войти </a></li>
+            <li class="last"><a href="{% url "car:register" %}"> Регистрация </a></li>
+            {% endif %}
+            </ul>
+            <div class="clear"></div>
         </div>
     {% endblock mainmenu %}
     <aside>
@@ -33,7 +40,7 @@
                         <a href="{% url 'forum:forum' %}"><li><i class="fa-solid fa-car-side"></i> Все категории </li></a>
                     {% endif %}
                     {% show_categories 'name' cat_selected %}
-                    {% if user.is_authenticated %}
+                    {% if request.user.is_authenticated %}
                         <a href="{% url 'forum:add_post' %}"><li><button class="btn btn-info">Добавить пост</li></a>
                     {% endif %}
 
@@ -54,19 +61,31 @@
     <main>
         {% block content %}
         {% endblock %}
-        <nav class="list-pages">
-          <ul>
-            {% for p in paginator.page_range %}
-              {% if page_obj.number == p %}
-                <li class="page-num page-num-selected">{{ p }}</li>
-              {% else %}
-               <li class="page-num">
-                  <a href="?page={{ p }}">{{ p }}</a>
+        {% if page_obj.has_other_pages %}
+          <nav class="list-pages">
+            <ul>
+              {% if page_obj.has_previous %}
+                <li class="page-num">
+                  <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
                 </li>
               {% endif %}
+            {% for p in page_obj.paginator.page_range %}
+              {% if page_obj.number == p %}
+                <li class="page-num page-num-selected">{{ p }}</li>
+              {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+                  <li class="page-num">
+                    <a href="?page={{ p }}">{{ p }}</a>
+                  </li>
+              {% endif %}
             {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-num">
+                  <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+                </li>
+              {% endif %}
           </ul>
         </nav>
+        {% endif %}    
     </main>
     <tr><td valign=top>
         <div id="footer">
