--- a/car_sale/car/templates/car/index.html
+++ b/car_sale/car/templates/car/index.html
@@ -6,8 +6,8 @@
 
 	<div class="features">
 		<h1>{{ title }}</h1>
-		{% if cars %}
-			{% for car in cars %}
+		{% if page_obj %}
+			{% for car in page_obj %}
 					<div class="alert alert-warning">
 					<p class "first">Дата объявления: {{ car.time_create|date:'d-m-Y' }}</p>
 					<p class "date">Год выпуска {{ car.date }}</p>
