--- a/car_sale/car/templates/forum/forum.html
+++ b/car_sale/car/templates/forum/forum.html
@@ -10,7 +10,7 @@
 			{% for post in posts %}
 					<div class="alert alert-warning">
 						<p class "first">Категория: {{ post.cat }}</p>
-						<p class "last">Дата: {{ post.time_update|date:'d-m-Y' }}</p>
+						<p class "last">Дата публикации: {{ post.time_update|date:'d-m-Y' }}</p>
 					<h3>{{ post.title }} </h3>
 					{% if post.photo %}
 						<p><img class="picture_img" src="{{post.photo.url}}">
