--- a/car_sale/car/templates/register/register.html
+++ b/car_sale/car/templates/register/register.html
@@ -12,7 +12,7 @@
                   <p>{{ f }}</p>
                   <div class="form-error">{{ f.errors }}</div>
             {% endfor %}
-            <button class="btn btn-success" type="submit"> Войти</button> 
+            <button class="btn btn-success" type="submit"> Зарегистрироваться</button> 
       </form>
 </div>
 {% endblock %}
