--- a/car_sale/car/templates/car/about.html
+++ b/car_sale/car/templates/car/about.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="features">
         <h1>{{ title }}</h1>
-        <p> CarSale площадка по размещению обявлений о продаже автомобилей и различных постов с историями австовладельцев. Здесь можно как купить автомобиль, так и завести новых друзей, обсуждая интересные темы. Есть возможность подписаться на авторов и скачать pdf-файл с данными об автомобиле. </p>
+        <p> CarSale площадка по размещению обявлений о продаже автомобилей и различных постов с историями австовладельцев. Здесь можно как купить автомобиль, так и завести новых друзей, обсуждая интересные темы. </p>
     </div>
 
 {% endblock %}
