--- a/car_sale/car/templates/forum/delete_post.html
+++ b/car_sale/car/templates/forum/delete_post.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 	<div class="features">
-		<h1>Вы уверены, что хотите удалить объявление?</h1>
+		<h1>Вы уверены, что хотите удалить пост?</h1>
 		<form method="post">
             {% csrf_token %}
             <span>{{ error }}</span>
