--- a/car_sale/car/templates/forum/detail_post.html
+++ b/car_sale/car/templates/forum/detail_post.html
@@ -4,12 +4,12 @@
 {% endblock %}
 {% block content %}
 	<div class="features">
-		<h1>{{ post.title }}</h1>
-		{% if post.photo %}
-			<img src="{{post.photo.url}}">
+		<h1>{{ posts.title }}</h1>
+		{% if posts.photo %}
+			<img src="{{posts.photo.url}}">
 		{% endif %}
-		<p> {{ post.text }} </p>
-		{% comment %} <a href="{% url 'update_car' car.id %}"><button class="btn btn-info">изменить</button></a>
-		<a href="{% url 'delete_car' car.id %}"><button class="btn btn-danger">удалить</button></a> {% endcomment %}
+		<p> {{ posts.text }} </p>
+		<a href="{% url 'forum:post_update' posts.slug %}"><button class="btn btn-info">изменить</button></a>
+		<a href="{% url 'forum:post_delete' posts.slug %}"><button class="btn btn-danger">удалить</button></a>
 	</div>
 {% endblock %}
