--- a/car_sale/car/templates/base.html
+++ b/car_sale/car/templates/base.html
@@ -33,7 +33,8 @@
     <aside>
         <a href="{% url 'car:home' %}" class='logocar'>CarSale</a>
             <ul>
-                {% if flag_post %}
+                {% if button == None %}
+                {% if posts %}
                     {% if cat_selected == 0 %}
                         <a><li><span class="selected"> Все категории </span></li></a>
                     {% else %}
@@ -44,7 +45,7 @@
                         <a href="{% url 'forum:add_post' %}"><li><button class="btn btn-info">Добавить пост</li></a>
                     {% endif %}
 
-                {% elif flag_car %}
+                {% else %}
                     {% if cat_selected == 0 %}
                         <a><li><span class="selected"> Все категории </span></li></a>
                     {% else %}
@@ -54,6 +55,7 @@
                     {% if user.is_authenticated %}
                         <a href="{% url 'car:add' %}"><li><button class="btn btn-info">Добавить объявление</li></a>
                     {% endif %}
+                {% endif %}
                 {% endif %}
                 
             </ul>
